== Git

* Generated C extension actually works now.
* `rake test` now properly depends on `rake compile`.
* Run Gem::Validator tests via Test::Unit::AutoRunner, so that redgreen has a chance to color the dots as well as the result line.
* Generated gemspec now selects files with Dir.glob instead of `git ls-files`.

== 0.6.1 -- 2010 April 22

* Reformat warning messages.
* Sample-require redgreen in the generated test/helper.
* Include common dvelopment dependencies in the generated gemspec.
* Fix a couple of typos.
* Document extensions to OptionParser.

== 0.6.0 -- 2010 April 20

* Add --webcvs to rdoc_options in generated gemspec.
* Move erb templates from lib to datadir.
* Generate a top-level project module.
* Move generated VERSION constant out of foo/version.rb, into foo.rb
* The shoe generator accepts an --application option to generate an executable stub.
* The shoe generator accepts a --data option to generate a data directory.
* The shoe generator accepts an --extension option to generate a C extension.
* The shoe generator accepts a --test-unit option to generate Test::Unit tests.
* Shoe::Tasks may no longer be built with a Gem::Specification object; pass the path to a gemspec file instead.
* Generate a .gitignore file.
* New `rake ronn` task to build man pages from ronn sources.
* Support running generated apps from a local checkout.

== 0.5.1 -- 2010 April 7

* Include summary in description.

== 0.5.0 -- 2010 April 7

* Lean on cucumber.yml to define cucumber tasks.
* Lean on spec.test_files and Gem::Validator to run tests.
* Shoe::Tasks can now be used a la carte.
* The shoe generator script now requires a path argument.

== 0.4.0 -- 2010 April 6

* Don't generate the gemspec; *use* it instead.

== 0.3.0 and before

(I need to spelunk through `git log` to be coherent here.)