@@ -27,4 +27,4 @@ Write your description here.
 
 ## SEE ALSO
 
-ruby(1)
+<%= name %>(3)
