@@ -1,0 +1,19 @@
+<%= name %>(3) --
+=================
+
+## SYNOPSIS
+
+`require '<%= name %>'`
+<%= module_name %>.somthing(_parameter_)
+
+## DESCRIPTION
+
+Write your description here.
+
+## AUTHOR
+
+<%= `git config --get user.name`.chomp %> <<%= `git config --get user.email`.chomp %>>
+
+## SEE ALSO
+
+ruby(1)
